--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
             <ul class="education__list">
                 <li class="list__item">NTU KhPI Faculty of Engineering and Physics, specialty applied mathematics, Kharkiv Higher, from 1996 to 2002 (6 years)</li>
                 <li class="list__item">front end developer courses, online WAY-UP school, self-education</li>
+                <li class="list__item">FREE CODE CAMP COURSES
+                    <a href="https://www.freecodecamp.org/certification/SerhiiRakhmanyi/javascript-algorithms-and-data-structures">Certificate</a>
+                </li>
+
             </ul>
         </div>
         <div class="wrapper__right">
