add rus ukr lang

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     <div class="black__line">линия</div>
     <div class="wrapper">
         <div class="wrapper__left">
+            <div class="langs">
+                <a href="./lang/ukr/index.html" class="langs__link">
+                    <button class="link__btn">UKR</button>
+                </a>
+                <a href="./lang/rus/index.html" class="langs__link">
+                    <button class="link__btn">RUS</button>
+                </a>
+            </div>
             <h1 class="title__name">
                 SERHII RAKHMANYI (43 years old)
             </h1>
