--- a/lang/ukr/index.html
+++ b/lang/ukr/index.html
@@ -30,12 +30,12 @@
             </h2>
             <h2 class="experience__title">Досвід роботи:</h2>
             <ul class="experience_list">
-                <li class="list__item">Эксперт з нерухомості
+                <li class="list__item">Eксперт з нерухомості
                     <p class="item__text">
                         з 02.2015 по теперішній час (7 років та 6 місяців) МПК BIG
                     </p>
                 </li>
-                <li class="list__item">Эксперт з нерухомості
+                <li class="list__item">Eксперт з нерухомості
                     <p class="item__text">
                         з 01.2010 по 12.2014 (4 роки 11 місяців) РК Альянс, Харьків
                     </p>
