--- a/lang/ukr/index.html
+++ b/lang/ukr/index.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
         <div class="wrapper__left">
             <div class="langs">
-                <a href="/index.html" class="langs__link">
+                <a href="//index.html" class="langs__link">
                     <button class="link__btn">АНГ</button>
                 </a>
                 <a href="../rus/index.html" class="langs__link">
