--- a/lang/rus/index.html
+++ b/lang/rus/index.html
@@ -18,7 +18,7 @@
                 <a href="../ukr/index.html" class="langs__link">
                     <button class="link__btn">УКР</button>
                 </a>
-                <a href="//index.html" class="langs__link">
+                <a href="/index.html" class="langs__link">
                     <button class="link__btn">АНГЛ</button>
                 </a>
             </div>
