--- a/lang/ukr/index.html
+++ b/lang/ukr/index.html
@@ -61,7 +61,7 @@
                 <li class="list__item">НТУ ХПІ, кафедра прикладної математики, інженерно-фізичний факультет, магістратура</li>
                 <li class="list__item">курси фронт енд девелопмент, он-лайн школа WayUp</li>
                 <li class="list__item">онлайн курси FREE CODE CAMP
-                    <a href="https://www.freecodecamp.org/certification/SerhiiRakhmanyi/javascript-algorithms-and-data-structures">Certificate</a>
+                    <a target="_blank" href="https://www.freecodecamp.org/certification/SerhiiRakhmanyi/javascript-algorithms-and-data-structures">Certificate</a>
                 </li>
 
             </ul>
