--- a/lang/rus/index.html
+++ b/lang/rus/index.html
@@ -58,7 +58,7 @@
                 <li class="list__item">НТУ ХПИ, кафедра прикладной математики, инженерно-физический факультет, магистратура</li>
                 <li class="list__item">курсы фронт енд девелопмент, он-лайн школа WayUp</li>
                 <li class="list__item">онлайн курсы FREE CODE CAMP
-                    <a href="https://www.freecodecamp.org/certification/SerhiiRakhmanyi/javascript-algorithms-and-data-structures">Certificate</a>
+                    <a target="_blank" href="https://www.freecodecamp.org/certification/SerhiiRakhmanyi/javascript-algorithms-and-data-structures">Certificate</a>
                 </li>
             </ul>
         </div>
