--- a/index_rus.html
+++ b/index_rus.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
         <div class="wrapper__left">
             <div class="langs">
-                <a href="../ukr/index.html" class="langs__link">
+                <a href="/index_ukr.html" class="langs__link">
                     <button class="link__btn">УКР</button>
                 </a>
                 <a href="/index.html" class="langs__link">
