--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div class="wrapper">
         <div class="wrapper__left">
             <div class="langs">
-                <a href="./lang/ukr/index.html" class="langs__link">
+                <a href="./index_ukr.html" class="langs__link">
                     <button class="link__btn">UKR</button>
                 </a>
-                <a href="./lang/rus/index.html" class="langs__link">
+                <a href="./index_rus.html" class="langs__link">
                     <button class="link__btn">RUS</button>
                 </a>
             </div>
@@ -67,7 +67,7 @@
             </ul>
         </div>
         <div class="wrapper__right">
-            <img src="/img/foto.jpg" alt="photo" class="wrapper__img">
+            <img src="./img/foto.jpg" alt="photo" class="wrapper__img">
             <ul class="wrapper__contacts">
                 <li class="contacts">e-mail: <a href="mailto:">sergo1604@gmail.com</a> </li>
                 <li class="contacts">tel: <a href="tel:+">+380662027480</a> <br>(viber whatsapp telegram)
