--- a/index_ukr.html
+++ b/index_ukr.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>резюме_Рахманый</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
 
@@ -67,7 +67,7 @@
             </ul>
         </div>
         <div class="wrapper__right">
-            <img src="/img/foto.jpg" alt="photo" class="wrapper__img">
+            <img src="./img/foto.jpg" alt="photo" class="wrapper__img">
             <ul class="wrapper__contacts">
                 <li class="contacts">e-mail: <a href="mailto:">sergo1604@gmail.com</a> </li>
                 <li class="contacts">tel: <a href="tel:+">+380662027480</a> <br>(viber whatsapp telegram)
