--- a/lang/rus/index.html
+++ b/lang/rus/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>резюме_Рахманый</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 
 </head>
 
@@ -15,10 +15,10 @@
     <div class="wrapper">
         <div class="wrapper__left">
             <div class="langs">
-                <a href="./index_ukr.html" class="langs__link">
+                <a href="../ukr/index.html" class="langs__link">
                     <button class="link__btn">УКР</button>
                 </a>
-                <a href="./index.html" class="langs__link">
+                <a href="../" class="langs__link">
                     <button class="link__btn">АНГЛ</button>
                 </a>
             </div>
@@ -63,7 +63,7 @@
             </ul>
         </div>
         <div class="wrapper__right">
-            <img src="./img/foto.jpg" alt="photo" class="wrapper__img">
+            <img src="/img/foto.jpg" alt="photo" class="wrapper__img">
             <ul class="wrapper__contacts">
                 <li class="contacts">e-mail: <a href="mailto:">sergo1604@gmail.com</a> </li>
                 <li class="contacts">тел: <a href="tel:+">+380662027480</a> <br>(viber whatsapp telegram)
