--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </ul>
         </div>
         <div class="wrapper__right">
-            <img src="./img/foto.jpg" alt="photo" class="wrapper__img">
+            <img src="./img/foto_3x4.jpg" alt="photo" class="wrapper__img">
             <ul class="wrapper__contacts">
                 <li class="contacts">e-mail: <a href="mailto:">sergo1604@gmail.com</a> </li>
                 <li class="contacts">tel: <a href="tel:+">+380662027480</a> <br>(viber whatsapp telegram)
@@ -95,6 +95,14 @@
                 Good communication skills, able to learn quickly, able to work in a team
 
             </p>
+            <div>
+                <a href="https://www.facebook.com/sergey.rakhmany" target="_blank" rel="noopener noreferrer">
+                    <img class = 'logo__img' src="/img/facebook-logo-svgrepo-com.svg" alt="fb...">
+                </a>
+                <a href="https://www.linkedin.com/in/sergeyrakhmany/" target="_blank" rel="noopener noreferrer">
+                    <img class = 'logo__img' src="/img/linkedin-logo-svgrepo-com.svg" alt="ldin...">
+                </a>
+            </div>
 
 
         </div>
