--- a/index_rus.html
+++ b/index_rus.html
@@ -63,7 +63,7 @@
             </ul>
         </div>
         <div class="wrapper__right">
-            <img src="./img/foto.jpg" alt="photo" class="wrapper__img">
+            <img src="./img/foto_3x4.jpg" alt="photo" class="wrapper__img">
             <ul class="wrapper__contacts">
                 <li class="contacts">e-mail: <a href="mailto:">sergo1604@gmail.com</a> </li>
                 <li class="contacts">тел: <a href="tel:+">+380662027480</a> <br>(viber whatsapp telegram)
@@ -89,6 +89,14 @@
             <p class="qualities__text">
                 Коммуникабельный, готов развиваться, учится, имею большой опыт работы с людьми, умею работать в команде
             </p>
+            <div>
+                <a href="https://www.facebook.com/sergey.rakhmany" target="_blank" rel="noopener noreferrer">
+                    <img class = 'logo__img' src="/img/facebook-logo-svgrepo-com.svg" alt="fb...">
+                </a>
+                <a href="https://www.linkedin.com/in/sergeyrakhmany/" target="_blank" rel="noopener noreferrer">
+                    <img class = 'logo__img' src="/img/linkedin-logo-svgrepo-com.svg" alt="ldin...">
+                </a>
+            </div>
         </div>
     </div>
     <div class="black__line">
