--- a/index_rus.html
+++ b/index_rus.html
@@ -91,10 +91,10 @@
             </p>
             <div>
                 <a href="https://www.facebook.com/sergey.rakhmany" target="_blank" rel="noopener noreferrer">
-                    <img class = 'logo__img' src="/img/facebook-logo-svgrepo-com.svg" alt="fb...">
+                    <img class = 'logo__img' src="./img/facebook-logo-svgrepo-com.svg" alt="fb...">
                 </a>
                 <a href="https://www.linkedin.com/in/sergeyrakhmany/" target="_blank" rel="noopener noreferrer">
-                    <img class = 'logo__img' src="/img/linkedin-logo-svgrepo-com.svg" alt="ldin...">
+                    <img class = 'logo__img' src="./img/linkedin-logo-svgrepo-com.svg" alt="ldin...">
                 </a>
             </div>
         </div>
